# python-package-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt
.github/workflows/: release.yml
src/python_package/: hello_world.py
tests/: conftest.py  test_init.py
