[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package-template"
authors = [{ name = "Niels Perfors", email = "niels.perfors1987@gmail.com" }]
description = "A template repository to work on a python package intended for publication on pypi.org."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["homeassistant", "wireguard"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = []
test = []

[project.urls]
Homepage = "https://github.com/niro1987/python-package-template"
Documentation = "https://github.com/niro1987/python-package-template"
Repository = "https://github.com/niro1987/python-package-template.git"
Issues = "https://github.com/niro1987/python-package-template/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.pylint.MAIN]
py-version = "3.11"
ignore = ["tests"]
load-plugins = ["pylint.extensions.code_style", "pylint.extensions.typing"]

[tool.pylint."MESSAGES CONTROL"]
disable = []
enable = []

[tool.pylint.REPORTS]
score = false

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.TYPING]
runtime-typing = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.ruff]
ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
